--- a/photo_gallery/src/pages/index.astro
+++ b/photo_gallery/src/pages/index.astro
@@ -7,7 +7,7 @@ import { getGalleryImages } from '../utils/images';
 const galleryImages = await getGalleryImages();
 
 // Page title
-const title = 'Photo Gallery';
+const title = 'Johannes Photos';
 ---
 
 <Layout title={title}>
