--- a/photo_gallery/src/layouts/Layout.astro
+++ b/photo_gallery/src/layouts/Layout.astro
@@ -14,7 +14,9 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-  </head>
+    <script defer data-domain="photos.jkrumm.dev" src="https://analytics.jkrumm.dev/js/script.file-downloads.hash.outbound-links.pageview-props.tagged-events.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+</head>
   <body>
     <main>
       <slot />
